[gd_scene load_steps=11 format=2]

[ext_resource path="res://Scenes/Level/Level.gd" type="Script" id=1]
[ext_resource path="res://Backgrounds/Level-01/Sprites/Main-Background/Main-Background.0000.png" type="Texture" id=2]
[ext_resource path="res://Scenes/Dialog/Dialog.tscn" type="PackedScene" id=3]
[ext_resource path="res://Fonts/OpenSans-Bold.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://Fonts/Godot/ControlsDefault.tres" type="DynamicFont" id=5]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [  ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="Animation" id=2]
resource_name = "FadeIn"
length = 1.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=3]
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0, 0, 0, 1 ) ]
}

[sub_resource type="DynamicFont" id=4]
size = 24
use_mipmaps = true
use_filter = true
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=5]
size = 46
use_mipmaps = true
use_filter = true
font_data = ExtResource( 4 )

[node name="Level" type="Node2D"]
script = ExtResource( 1 )

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]
editor/display_folded = true

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]

[node name="Background" type="Sprite" parent="ParallaxBackground/ParallaxLayer"]
texture = ExtResource( 2 )
centered = false
region_rect = Rect2( 0, 0, 1920, 1080 )

[node name="SpecielFX" type="AnimatedSprite" parent="."]
visible = false
frames = SubResource( 1 )

[node name="BgMusic" type="AudioStreamPlayer" parent="."]
bus = "Music"

[node name="EnemyCycle" type="Timer" parent="."]

[node name="DiffUp" type="Timer" parent="."]
wait_time = 5.0

[node name="BossDialog" parent="." instance=ExtResource( 3 )]
visible = false

[node name="LvlEnd" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/FadeIn = SubResource( 2 )
anims/FadeOut = SubResource( 3 )

[node name="LblH" type="Label" parent="."]
modulate = Color( 1, 0.654902, 0, 1 )
margin_top = 45.0
margin_right = 40.0
margin_bottom = 80.0
custom_fonts/font = SubResource( 4 )
text = "H"
align = 1

[node name="LblE" type="Label" parent="."]
modulate = Color( 0, 0.243137, 0.760784, 1 )
margin_top = 80.0
margin_right = 40.0
margin_bottom = 115.0
custom_fonts/font = SubResource( 4 )
text = "E"
align = 1

[node name="LblPlayer1" type="Label" parent="."]
visible = false
modulate = Color( 0.0117647, 0.360784, 0, 1 )
margin_left = 60.0
margin_top = 10.0
margin_right = 160.0
margin_bottom = 45.0
custom_fonts/font = SubResource( 4 )
text = "Player 1"
align = 1

[node name="LblHPlayer1" type="Label" parent="."]
visible = false
modulate = Color( 1, 0.654902, 0, 1 )
margin_left = 60.0
margin_top = 45.0
margin_right = 160.0
margin_bottom = 80.0
custom_fonts/font = SubResource( 4 )
text = "0"
align = 1

[node name="LblEPlayer1" type="Label" parent="."]
visible = false
modulate = Color( 0, 0.243137, 0.760784, 1 )
margin_left = 60.0
margin_top = 80.0
margin_right = 160.0
margin_bottom = 115.0
custom_fonts/font = SubResource( 4 )
text = "0"
align = 1

[node name="LblPlayer2" type="Label" parent="."]
visible = false
modulate = Color( 0.0117647, 0.360784, 0, 1 )
margin_left = 190.0
margin_top = 10.0
margin_right = 290.0
margin_bottom = 45.0
custom_fonts/font = SubResource( 4 )
text = "Player 2"
align = 1

[node name="LblHPlayer2" type="Label" parent="."]
visible = false
modulate = Color( 1, 0.654902, 0, 1 )
margin_left = 190.0
margin_top = 45.0
margin_right = 290.0
margin_bottom = 80.0
custom_fonts/font = SubResource( 4 )
text = "0"
align = 1

[node name="LblEPlayer2" type="Label" parent="."]
visible = false
modulate = Color( 0, 0.243137, 0.760784, 1 )
margin_left = 190.0
margin_top = 80.0
margin_right = 290.0
margin_bottom = 115.0
custom_fonts/font = SubResource( 4 )
text = "0"
align = 1

[node name="LblPlayer3" type="Label" parent="."]
visible = false
modulate = Color( 0.0117647, 0.360784, 0, 1 )
margin_left = 320.0
margin_top = 10.0
margin_right = 420.0
margin_bottom = 45.0
custom_fonts/font = SubResource( 4 )
text = "Player 3"
align = 1

[node name="LblHPlayer3" type="Label" parent="."]
visible = false
modulate = Color( 1, 0.654902, 0, 1 )
margin_left = 320.0
margin_top = 45.0
margin_right = 420.0
margin_bottom = 80.0
custom_fonts/font = SubResource( 4 )
text = "0"
align = 1

[node name="LblEPlayer3" type="Label" parent="."]
visible = false
modulate = Color( 0, 0.243137, 0.760784, 1 )
margin_left = 320.0
margin_top = 80.0
margin_right = 420.0
margin_bottom = 115.0
custom_fonts/font = SubResource( 4 )
text = "0"
align = 1

[node name="LblBoss" type="Label" parent="."]
visible = false
modulate = Color( 1, 0, 0, 1 )
margin_left = 1780.0
margin_top = 10.0
margin_right = 1880.0
margin_bottom = 45.0
custom_fonts/font = SubResource( 4 )
text = "Boss"
align = 1

[node name="LblHBoss" type="Label" parent="."]
visible = false
modulate = Color( 1, 0.654902, 0, 1 )
margin_left = 1780.0
margin_top = 45.0
margin_right = 1880.0
margin_bottom = 80.0
custom_fonts/font = SubResource( 4 )
text = "0"
align = 1

[node name="GameOver" type="VideoPlayer" parent="."]
visible = false
margin_right = 1920.0
margin_bottom = 1080.0

[node name="pnGameMenu" type="Panel" parent="."]
visible = false
margin_right = 1920.0
margin_bottom = 1080.0

[node name="lblTitle" type="Label" parent="pnGameMenu"]
margin_top = 20.0
margin_right = 1920.0
margin_bottom = 100.0
custom_fonts/font = SubResource( 5 )
text = "Paused"
align = 1
valign = 1

[node name="btnContinue" type="Button" parent="pnGameMenu"]
margin_left = 785.0
margin_top = 400.0
margin_right = 1135.0
margin_bottom = 441.0
custom_fonts/font = ExtResource( 5 )
text = "Continue"

[node name="btnRetry" type="Button" parent="pnGameMenu"]
margin_left = 785.0
margin_top = 500.0
margin_right = 1135.0
margin_bottom = 541.0
custom_fonts/font = ExtResource( 5 )
text = "Retry"

[node name="btnQuit" type="Button" parent="pnGameMenu"]
margin_left = 785.0
margin_top = 600.0
margin_right = 1135.0
margin_bottom = 641.0
custom_fonts/font = ExtResource( 5 )
text = "Quit"

[connection signal="timeout" from="EnemyCycle" to="." method="_on_EnemyCycle_timeout"]
[connection signal="timeout" from="DiffUp" to="." method="_on_DiffUp_timeout"]
[connection signal="dialog_finished" from="BossDialog" to="." method="_on_BossDialog_dialog_finished"]
[connection signal="timeout" from="LvlEnd" to="." method="_on_LvlEnd_timeout"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="pressed" from="pnGameMenu/btnContinue" to="." method="_on_btnContinue_pressed"]
[connection signal="pressed" from="pnGameMenu/btnRetry" to="." method="_on_btnRetry_pressed"]
[connection signal="pressed" from="pnGameMenu/btnQuit" to="." method="_on_btnQuit_pressed"]
